Small patches
- added missing ``@Unique` to mixins
- updated gradle-wrapper.jar and scripts
- fix duplicate entry in Xray